# sarcasm-radar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: README.md
data/curated/: LABELING_PROTOCOL.md  indian_english.csv
docs/: architecture.md  data_card.md  model_card.md
notebooks/: 01_eda.ipynb  02_error_analysis.ipynb  03_train_colab.ipynb
scripts/: download_data.py  train_baseline.py
src/sarcasm_radar/: __init__.py  config.py
src/sarcasm_radar/api/: dependencies.py  main.py  schemas.py
src/sarcasm_radar/data/: __init__.py  clean.py  curate.py  load.py
src/sarcasm_radar/evaluation/: __init__.py  metrics.py
src/sarcasm_radar/features/: __init__.py
src/sarcasm_radar/models/: __init__.py  baseline.py  inference.py  multilingual.py  transformer.py
src/sarcasm_radar/utils/: __init__.py  logging.py
tests/: conftest.py  test_api.py  test_baseline.py  test_clean.py  test_curate.py  test_download_data.py  test_inference.py  test_load.py  test_metrics.py  test_multilingual.py  test_smoke.py  test_transformer.py
